--- a/P3/Hovedside.html
+++ b/P3/Hovedside.html
@@ -30,7 +30,7 @@
 
       <div id="hovedside_boks">
         <div class="nyheter_boks">
-          <p>Nyheter:</p>
+          <h3>Nyheter</h3>
         </div>
 
         <div class="tekst_boks">
