--- a/P3/PR_og_design.html
+++ b/P3/PR_og_design.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>PR og Design - Naborevyen</title>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div class="center_element">
-      <img src="../Bilder/Bannere/Banner_1.jpg" class="banner" alt="Banner">
+      <img src="Bilder/Bannere/Banner_1.jpg" class="banner" alt="Banner">
       <div class="gruppeboks">
         <div class="gruppetekst">
           <h1>PR- og Designgruppen</h1>
@@ -21,12 +21,12 @@
           </p>
         </div>
         <div class="gruppeleder">
-          <img src="../Bilder/Undergruppebilder/Fake_PR.jpg" class="lederbilde" alt="Leder">
+          <img src="Bilder/Undergruppebilder/Fake_PR.jpg" class="lederbilde" alt="Leder">
           <h2>Navn Navnesen, Leder</h2>
           <p>Tekst om lederen</p>
         </div>
       </div>
     </div>
-    <script src="../Website_shell.js" type="text/javascript"></script>
+    <script src="Website_shell.js" type="text/javascript"></script>
   </body>
 </html>
