Info gruppesider del 1

--- a/P3/Bygg.html
+++ b/P3/Bygg.html
@@ -42,9 +42,19 @@
           </p>
         </div>
         <div class="gruppeleder">
-          <img src="Bilder/Undergruppebilder/Fake_PR.jpg" class="lederbilde" alt="Leder">
-          <h2>Navn Navnesen, Leder</h2>
-          <p>Tekst om lederen</p>
+          <img src="Bilder/Undergruppebilder/Byggmester.jpg" class="lederbilde" alt="Leder">
+          <h2>Byggsjef: Kasper Klausen</h2>
+          <p>For andre år på rad er jeg (Kasper Klausen) byggsjef i Naborevyen.
+            Når jeg ikke skremmer regissører eller stjeler fra internasjonale
+            selskaper pleier jeg å holde meg til mer nøkterne aktiviteter
+            knyttet til det å gå andreåret på Nanoteknologi. Som for eksempel å
+            synge i AdamsEplekor eller frustrere meg over Matte 4N.<br>
+            Nå som jeg har et års erfaring med høyhastighetsbygging bak meg er
+            jeg mer enn klar for å bygge enda større og fortere enn før. Bussen
+            var gruppas mesterverk i fjor, men akkurat som både Vy og AtB må vi
+            følge med i tiden og renovere oss selv. Derfor kan jeg garantere at
+            det ikke blir noen busser i år! Det eneste jeg kan si med sikkerhet
+            er at det bygges!</p>
         </div>
       </div>
     </div>
