--- a/P3/Dans.html
+++ b/P3/Dans.html
@@ -20,7 +20,7 @@
         </div>
         <div class="gruppeleder">
           <img src="Bilder/Undergruppebilder/Fake_PR.jpg" class="lederbilde" alt="Leder">
-          <h2>Navn Navnesen, Leder</h2>
+          <h2>Dansesjef: Ninni Marie Unneberg</h2>
           <p>Tekst om lederen</p>
         </div>
       </div>
