--- a/P3/PR_og_design.html
+++ b/P3/PR_og_design.html
@@ -22,8 +22,12 @@
         </div>
         <div class="gruppeleder">
           <img src="Bilder/Undergruppebilder/Fake_PR.jpg" class="lederbilde" alt="Leder">
-          <h2>Navn Navnesen, Leder</h2>
-          <p>Tekst om lederen</p>
+          <h2>PR-sjef: Jonas Eide</h2>
+          <p>Hei! Mitt navn er Jonas, og jeg er PR- og designsjef i Naborevyen.
+            Jeg går lektorstudiet i 2. klasse med retning matematikk og kjemi,
+            og har vært med aktivt i revyen som både danser og skuespiller siden
+            jeg begynte :) I år skal jeg bidra til å gjøre jubileumsrevyen til
+            tidenes beste!</p>
         </div>
       </div>
     </div>
