--- a/P3/Styret.html
+++ b/P3/Styret.html
@@ -17,10 +17,10 @@
         </div>
         <div class="gruppeleder">
           <img src="Bilder/Undergruppebilder/Fake_PR.jpg" class="lederbilde" alt="Leder">
-          <h2>Navn Navnesen, Leder</h2>
+          <h2>Revysjef: Merete Hvattum</h2>
           <p>Tekst om lederen</p>
           <img src="Bilder/Undergruppebilder/Fake_PR.jpg" class="lederbilde" alt="Nestleder">
-          <h2>Navn Navnesen, Nestleder</h2>
+          <h2>Nestleder: Nan Amalie Videng</h2>
           <p>Tekst om nestlederen</p>
         </div>
       </div>
