--- a/P3/Økonomi.html
+++ b/P3/Økonomi.html
@@ -26,7 +26,7 @@
         </div>
         <div class="gruppeleder">
           <img src="Bilder/Undergruppebilder/Fake_PR.jpg" class="lederbilde" alt="Leder">
-          <h2>Navn Navnesen, Leder</h2>
+          <h2>Økonomisjef: Frida Sogge Steimoeggen</h2>
           <p>Tekst om lederen</p>
         </div>
       </div>
