--- a/P3/Skribent.html
+++ b/P3/Skribent.html
@@ -22,7 +22,7 @@
         </div>
         <div class="gruppeleder">
           <img src="Bilder/Undergruppebilder/Fake_PR.jpg" class="lederbilde" alt="Leder">
-          <h2>Navn Navnesen, Leder</h2>
+          <h2>Skribentsjef: Simon Bolme</h2>
           <p>Tekst om lederen</p>
         </div>
       </div>
