--- a/P3/Teknikk.html
+++ b/P3/Teknikk.html
@@ -29,8 +29,17 @@
         </div>
         <div class="gruppeleder">
           <img src="Bilder/Undergruppebilder/Fake_PR.jpg" class="lederbilde" alt="Leder">
-          <h2>Navn Navnesen, Leder</h2>
-          <p>Tekst om lederen</p>
+          <h2>Teknisk Sjef: Espen Hovland</h2>
+          <p>Teknisk sjef for Naborevyen 2020, Espen, tar over den tekniske
+            stafettpinnen etter forrige tekniske sjef, som også het Espen,
+            praktisk nok. Årets Espen er 23 år gammel og går tredjeåret på
+            nanoteknologi, med spesialisering i nanoelektronikk.<br>
+            Jeg har vært med på de to forrige revyene, Stayin’ live og Arbeid
+            pågår, begge gangene som bassist i revybandet. I år tenkte jeg at
+            jeg hadde lyst til å være mer med på utformingen av revyen, og
+            derfor endte jeg opp som teknisk sjef, klar for å lage tidenes
+            beste Naborevy!
+          </p>
         </div>
       </div>
     </div>
