--- a/P3/Velferd.html
+++ b/P3/Velferd.html
@@ -17,7 +17,7 @@
         </div>
         <div class="gruppeleder">
           <img src="Bilder/Undergruppebilder/Fake_PR.jpg" class="lederbilde" alt="Leder">
-          <h2>Navn Navnesen, Leder</h2>
+          <h2>Velferdssjef: Ferdinand Tomek Marnburg</h2>
           <p>Tekst om lederen</p>
         </div>
       </div>
