--- a/P3/Billettsalg.html
+++ b/P3/Billettsalg.html
@@ -7,8 +7,7 @@
   </head>
   <body>
     <div class="center_element">
-<!--<iframe id="ticketcoIframe" src="//ticketco.events/no/nb/widgets/organizers/1834/events?sections%5B%5D=title&amp;amp;sections%5B%5D=description&amp;amp;sections%5B%5D=datetime&amp;amp;sections%5B%5D=tickets&amp;amp;sections%5B%5D=location&amp;amp;sections%5B%5D=contact_organizer&amp;amp;visibility=upcoming&amp;amp;date_filter=2019-01-01&amp;amp;date_filter_sort_direction=true&amp;amp;flush=true"></iframe>
---><iframe id="ticketcoIframe2" src="//ticketco.events/no/nb/widgets/organizers/1834/events?sections%5B%5D=title&amp;amp;sections%5B%5D=description&amp;amp;sections%5B%5D=datetime&amp;amp;sections%5B%5D=tickets&amp;amp;sections%5B%5D=location&amp;amp;sections%5B%5D=contact_organizer&amp;amp;visibility=upcoming&amp;amp;date_filter=2019-01-01&amp;amp;date_filter_sort_direction=true&amp;amp;flush=true"></iframe>
+      <iframe id="ticketcoIframe" src="//ticketco.events/no/nb/widgets/organizers/1834/events?sections%5B%5D=title&amp;amp;sections%5B%5D=description&amp;amp;sections%5B%5D=datetime&amp;amp;sections%5B%5D=tickets&amp;amp;sections%5B%5D=location&amp;amp;sections%5B%5D=contact_organizer&amp;amp;visibility=upcoming&amp;amp;date_filter=2019-01-01&amp;amp;date_filter_sort_direction=true&amp;amp;flush=true"></iframe>
     </div>
     <script src="Website_shell.js" type="text/javascript"></script>
   </body>
