lagt til litt med css

--- a/P3/Oversikt_undergrupper.html
+++ b/P3/Oversikt_undergrupper.html
@@ -26,7 +26,7 @@
         <a href="Undergrupper/Kostyme_og_rekvisitter.html"><img src="Bilder/Undergruppebilder/Fake_PR.JPG"
            title="Kostyme og rekvisitter logo" alt="Kostyme og rekvisitter logoen"><p>Kostyme og rekvisitter</p></a>
 
-        <a href="Undergrupper/Musikk_og_band.html"><img src="Bilder/Undergruppebilder/Fake_PR.JPG"
+        <a href="Undergrupper/Musikk.html"><img src="Bilder/Undergruppebilder/Fake_PR.JPG"
            title="Musikk og band logo" alt="Musikk og band logoen"><p>Musikk og band</p></a>
 
         <a href="Undergrupper/PR_og_design.html"><img src="Bilder/Undergruppebilder/Fake_PR.JPG"
