la til skuespill referanse

--- a/P3/Oversikt_undergrupper.html
+++ b/P3/Oversikt_undergrupper.html
@@ -15,7 +15,8 @@
         <a href="Undergrupper/Styret.html">
         <img src="Bilder/Undergruppebilder/Fake_PR.JPG" title="PR logo" alt="PR logoen"><p>Revystyret</p></a>
 
-        <h1>Oversikt over undergrupper</h1>
+        <a href="Undergrupper/skuespill.html"><img src="Bilder/PR_logo.png"
+          title="skuespill logo" alt="skuespill logoen"><p>Bygg</p></a>
 
         <a href="Undergrupper/Bygg.html"><img src="Bilder/PR_logo.png"
           title="Bygg logo" alt="Bygg logoen"><p>Bygg</p></a>
