Arkivet ser ikke trash ut

--- a/P3/Arkiv.html
+++ b/P3/Arkiv.html
@@ -78,7 +78,7 @@
     </div>
     <script src="Website_shell.js" type="text/javascript"></script>
     <script src="Arkiv.js" type="text/javascript"> </script>
-    <script type="text/javascript" src="./Bilder/Arkiv_Bilder/TextOutput.txt" onload="load()"></script>
+    <script type="text/javascript" src="./Bilder/Arkiv_Bilder/TestOutput2.JSON" onload="load()"></script>
 
   </body>
 </html>
