fikset stylingen på oversikt undergrupper veldig

--- a/P3/Oversikt_undergrupper.html
+++ b/P3/Oversikt_undergrupper.html
@@ -13,37 +13,37 @@
         <h1>Oversikt over undergrupper</h1>
 
         <a href="Styret.html">
-        <img src="Bilder/Undergruppebilder/Fake_PR.JPG" title="PR logo" alt="PR logoen"><p>Revystyret</p></a>
+        <img src="Bilder/Undergruppebilder/Fake_PR.JPG" title="PR logo" alt="PR logoen"><h3>Revystyret</h3></a>
 
         <a href="Skuespill.html"><img src="Bilder/PR_logo.png"
-          title="Skuespill logo" alt="Skuespill logoen"><p>Bygg</p></a>
+          title="Skuespill logo" alt="Skuespill logoen"><h3>Skuespill</h3></a>
 
         <a href="Bygg.html"><img src="Bilder/PR_logo.png"
-          title="Bygg logo" alt="Bygg logoen"><p>Bygg</p></a>
+          title="Bygg logo" alt="Bygg logoen"><h3>Bygg</h3></a>
 
         <a href="Dans.html"><img src="Bilder/Undergruppebilder/Fake_PR.JPG"
-          title="Dans logo" alt="Dans logoen"><p>Dans</p></a>
+          title="Dans logo" alt="Dans logoen"><h3>Dans</h3></a>
 
         <a href="Kostyme_og_rekvisitter.html"><img src="Bilder/Undergruppebilder/Fake_PR.JPG"
-           title="Kostyme og rekvisitter logo" alt="Kostyme og rekvisitter logoen"><p>Kostyme og rekvisitter</p></a>
+           title="Kostyme og rekvisitter logo" alt="Kostyme og rekvisitter logoen"><h3>Kostyme/rekvisitter</h3></a>
 
         <a href="Musikk.html"><img src="Bilder/Undergruppebilder/Fake_PR.JPG"
-           title="Musikk og band logo" alt="Musikk og band logoen"><p>Musikk og band</p></a>
+           title="Musikk og band logo" alt="Musikk og band logoen"><h3>Musikk og band</h3></a>
 
         <a href="PR_og_design.html"><img src="Bilder/Undergruppebilder/Fake_PR.JPG"
-           title="PR logo" alt="PR logoen"><p>PR og design</p></a>
+           title="PR logo" alt="PR logoen"><h3>PR og design</h3></a>
 
         <a href="Skribent.html"><img src="Bilder/Undergruppebilder/Fake_PR.JPG"
-           title="Skriblent logo" alt="Skriblent logoen"><p>Skriblent</p></a>
+           title="Skriblent logo" alt="Skriblent logoen"><h3>Skriblent</h3></a>
 
         <a href="Teknikk.html"><img src="Bilder/Undergruppebilder/Fake_PR.JPG"
-           title="Teknikk logo" alt="Teknikk logoen"><p>Teknikk</p></a>
+           title="Teknikk logo" alt="Teknikk logoen"><h3>Teknikk</h3></a>
 
         <a href="Velferd.html"><img src="Bilder/Undergruppebilder/Fake_PR.JPG"
-           title="Velferd logo" alt="Velferd logoen"><p>Velferd</p></a>
+           title="Velferd logo" alt="Velferd logoen"><h3>Velferd</h3></a>
 
         <a href="Økonomi.html"><img src="Bilder/Undergruppebilder/Fake_PR.JPG"
-           title="Økonomi logo" alt="Økonomi logoen"><p>Økonomi</p></a>
+           title="Økonomi logo" alt="Økonomi logoen"><h3>Økonomi</h3></a>
       </div>
     </div>
 
