Arkivet er på et "ok" stadie

--- a/P3/Arkiv.html
+++ b/P3/Arkiv.html
@@ -62,17 +62,21 @@
       </div>
     -->
     <div class="arkiv_video_omrade">
-      <h1 class="arkiv_title">Filmer av revyene</h1>
+      <h1 class="video_top_title">Filmer av revyene</h1>
+      <h2 id="video_title_2019" class="video_title"> 2019: Arbeid Pågår</h2>
+      <h2 id="video_title_2018" class="video_title"> 2018: Stayin'Live</h2>
 
-        <h2 id="video_title_1" class="video_title"> 2018: Stayin'Live</h2>
-        <h2 id="video_title_2" class="video_title"> 2017: I grevens Tid</h2>
-        <h2 id="video_title_3" class="video_title"> 2016: Hello World</h2>
+      <iframe id="video_2019" class="arkiv_video" src="https://www.youtube.com/embed?list=PLgQnlEqLQbHEg-sjSRiUrETO8wUWbUH_M"
+      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe id="video_2018" class="arkiv_video" src="https://www.youtube.com/embed?listType=playlist&list=PLgQnlEqLQbHEX0eKT3Qh0cW_2ZTkLbKdL"
+      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-      <iframe id="video_1" class="arkiv_video" src="https://www.youtube.com/embed?listType=playlist&list=PLgQnlEqLQbHEX0eKT3Qh0cW_2ZTkLbKdL"
+
+      <h2 id="video_title_2017" class="video_title"> 2017: I grevens Tid</h2>
+      <h2 id="video_title_2016" class="video_title"> 2016: Hello World</h2>
+      <iframe id="video_2017" class="arkiv_video" src="https://youtube.com/embed?listType=playlist&list=PLgQnlEqLQbHEfkoxy2eTL_Dqh55RgkOND"
       allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      <iframe id="video_2" class="arkiv_video" src="https://youtube.com/embed?listType=playlist&list=PLgQnlEqLQbHEfkoxy2eTL_Dqh55RgkOND"
-      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      <iframe id="video_3" class="arkiv_video" src="https://youtube.com/embed/DjxH0PXsM0k"
+      <iframe id="video_2016" class="arkiv_video" src="https://youtube.com/embed/DjxH0PXsM0k"
       allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
     </div>
