--- a/P3/Oversikt_undergrupper.html
+++ b/P3/Oversikt_undergrupper.html
@@ -13,10 +13,10 @@
         <h1>Oversikt over undergrupper</h1>
 
         <a href="Styret.html">
-        <img src="Bilder/Undergruppebilder/Fake_PR.JPG" title="PR logo" alt="PR logoen"><h3>Revystyret</h3></a>
+        <img src="Bilder/Undergruppebilder/Fake_PR.JPG" title="PR logo" alt="PR logoen"><h3>Styret</h3></a>
 
         <a href="Skuespill.html"><img src="Bilder/PR_logo.png"
-          title="Skuespill logo" alt="Skuespill logoen"><h3>Skuespill</h3></a>
+          title="Skuespill logo" alt="Skuespill logoen"><h3>Skuespillere</h3></a>
 
         <a href="Bygg.html"><img src="Bilder/PR_logo.png"
           title="Bygg logo" alt="Bygg logoen"><h3>Bygg</h3></a>
@@ -25,16 +25,16 @@
           title="Dans logo" alt="Dans logoen"><h3>Dans</h3></a>
 
         <a href="Kostyme_og_rekvisitter.html"><img src="Bilder/Undergruppebilder/Fake_PR.JPG"
-           title="Kostyme og rekvisitter logo" alt="Kostyme og rekvisitter logoen"><h3>Kostyme/rekvisitter</h3></a>
+           title="Kostyme og rekvisitter logo" alt="Kostyme og rekvisitter logoen"><h3>Kostyme & rekvisitt</h3></a>
 
         <a href="Musikk.html"><img src="Bilder/Undergruppebilder/Fake_PR.JPG"
-           title="Musikk og band logo" alt="Musikk og band logoen"><h3>Musikk og band</h3></a>
+           title="Musikk og band logo" alt="Musikk og band logoen"><h3>Musikk</h3></a>
 
         <a href="PR_og_design.html"><img src="Bilder/Undergruppebilder/Fake_PR.JPG"
            title="PR logo" alt="PR logoen"><h3>PR og design</h3></a>
 
-        <a href="Skribent.html"><img src="Bilder/Undergruppebilder/Fake_PR.JPG"
-           title="Skriblent logo" alt="Skriblent logoen"><h3>Skriblent</h3></a>
+          <a href="Skribent.html"><img src="Bilder/Undergruppebilder/Fake_PR.JPG"
+             title="Skriblent logo" alt="Skriblent logoen"><h3>Skriblent</h3></a>
 
         <a href="Teknikk.html"><img src="Bilder/Undergruppebilder/Fake_PR.JPG"
            title="Teknikk logo" alt="Teknikk logoen"><h3>Teknikk</h3></a>
