resized img for oversikt_undergrupper

--- a/P3/Oversikt_undergrupper.html
+++ b/P3/Oversikt_undergrupper.html
@@ -15,10 +15,10 @@
         <a href="Styret.html">
         <img src="Bilder/Undergruppebilder/Fake_PR.jpg" title="PR logo" alt="PR logoen"><h3>Styret</h3></a>
 
-        <a href="Skuespill.html"><img src="Bilder/PR_logo.png"
+        <a href="Skuespill.html"><img src="Bilder/Undergruppebilder/Fake_PR.jpg"
           title="Skuespill logo" alt="Skuespill logoen"><h3>Skuespillere</h3></a>
 
-        <a href="Bygg.html"><img src="Bilder/PR_logo.png"
+        <a href="Bygg.html"><img src="Bilder/Undergruppebilder/Fake_PR.jpg"
           title="Bygg logo" alt="Bygg logoen"><h3>Bygg</h3></a>
 
         <a href="Dans.html"><img src="Bilder/Undergruppebilder/Fake_PR.jpg"
