fikk endelig oversikt undergrupper på greip, kill me now

--- a/P3/Oversikt_undergrupper.html
+++ b/P3/Oversikt_undergrupper.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr" class="html_shell">
+<html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title>Oversikt Undergrupper</title>
     <link rel="stylesheet" href="style.css">
   </head>
-  <body class="entire_page">
-
+  <body>
     <div class="center_element">
       <div class="oversikt_undergrupper_boks">
 
-        <h1>Oversikt over undergrupper</h1>
-
-        <a href="Styret.html">
-        <img src="Bilder/Undergruppebilder/Fake_PR.jpg" title="PR logo" alt="PR logoen"><h3>Styret</h3></a>
+        <a href="Styret.html"><img src="Bilder/Undergruppebilder/Fake_PR.jpg"
+          title="PR logo" alt="PR logoen"><h3>Styret</h3></a>
 
         <a href="Skuespill.html"><img src="Bilder/Undergruppebilder/Fake_PR.jpg"
           title="Skuespill logo" alt="Skuespill logoen"><h3>Skuespillere</h3></a>
@@ -25,28 +22,28 @@
           title="Dans logo" alt="Dans logoen"><h3>Dans</h3></a>
 
         <a href="Kostyme_og_rekvisitter.html"><img src="Bilder/Undergruppebilder/Fake_PR.jpg"
-           title="Kostyme og rekvisitter logo" alt="Kostyme og rekvisitter logoen"><h3>Kostyme & rekvisitt</h3></a>
+          title="Kostyme og rekvisitter logo" alt="Kostyme og rekvisitter logoen">
+          <h3>Kostyme & rekvisitt</h3></a>
 
         <a href="Musikk.html"><img src="Bilder/Undergruppebilder/Fake_PR.jpg"
-           title="Musikk og band logo" alt="Musikk og band logoen"><h3>Musikk</h3></a>
+          title="Musikk og band logo" alt="Musikk og band logoen"><h3>Musikk</h3></a>
 
         <a href="PR_og_design.html"><img src="Bilder/Undergruppebilder/Fake_PR.jpg"
-           title="PR logo" alt="PR logoen"><h3>PR og design</h3></a>
+          title="PR logo" alt="PR logoen"><h3>PR og design</h3></a>
 
-          <a href="Skribent.html"><img src="Bilder/Undergruppebilder/Fake_PR.jpg"
-             title="Skriblent logo" alt="Skriblent logoen"><h3>Skriblent</h3></a>
+        <a href="Skribent.html"><img src="Bilder/Undergruppebilder/Fake_PR.jpg"
+          title="Skribent logo" alt="Skribent logoen"><h3>Skribent</h3></a>
 
         <a href="Teknikk.html"><img src="Bilder/Undergruppebilder/Fake_PR.jpg"
-           title="Teknikk logo" alt="Teknikk logoen"><h3>Teknikk</h3></a>
+          title="Teknikk logo" alt="Teknikk logoen"><h3>Teknikk</h3></a>
 
         <a href="Velferd.html"><img src="Bilder/Undergruppebilder/Fake_PR.jpg"
-           title="Velferd logo" alt="Velferd logoen"><h3>Velferd</h3></a>
+          title="Velferd logo" alt="Velferd logoen"><h3>Velferd</h3></a>
 
         <a href="Økonomi.html"><img src="Bilder/Undergruppebilder/Fake_PR.jpg"
-           title="Økonomi logo" alt="Økonomi logoen"><h3>Økonomi</h3></a>
+          title="Økonomi logo" alt="Økonomi logoen"><h3>Økonomi</h3></a>
       </div>
     </div>
-
     <script src="Website_shell.js" type="text/javascript"></script>
   </body>
 </html>
