En hel haug med info fra Revyen

--- a/P3/Dans.html
+++ b/P3/Dans.html
@@ -19,9 +19,15 @@
           </p>
         </div>
         <div class="gruppeleder">
-          <img src="Bilder/Undergruppebilder/Fake_PR.jpg" class="lederbilde" alt="Leder">
+          <img src="Bilder/Undergruppebilder/Ninni.jpg" class="lederbilde" alt="Leder">
           <h2>Dansesjef: Ninni Maria Unneberg</h2>
-          <p>Tekst om lederen</p>
+          <p>
+            Ninni er Naborevyens dansesjef og går 2. klasse LUR (lektor realfag)
+            med retningen matematikk og kjemi. Hun liker - sjokkerende nok -
+            å danse. I forrige revy var hun også med i dansegruppa, og tok over
+            stafettpinnen for Ingrid Ertzgaard. Ninni er også med i skribentgruppa
+            for å sørge for at danserne får den plassen de fortjener i revyen :D
+          </p>
         </div>
       </div>
     </div>
