--- a/P3/Om_oss.html
+++ b/P3/Om_oss.html
@@ -12,6 +12,9 @@
         <div class ="gruppetekst">
           <h1>Om Naborevyen</h1>
           <p>
+            Naborevyen er revyen for studenter som tilhører Spanskrøret
+            (Lektorutdanning i realfag) og Timini (Nanoteknologi).<br><br>
+
             Naborevyen ble stiftet over en pakke appelsinkjeks. Ryktene vil ha det
             til at Nicolai Winter-Hjelm sto for stiftelsen alene, siden han er den
             eneste i Naborevyen som liker, og noen gang kommer til å like,
@@ -26,7 +29,7 @@
           </p>
         </div>
         <div class="gruppeleder">
-
+          
         </div>
       </div>
     </div>
