--- a/P3/Styret.html
+++ b/P3/Styret.html
@@ -19,9 +19,20 @@
           <img src="Bilder/Undergruppebilder/Fake_PR.jpg" class="lederbilde" alt="Leder">
           <h2>Revysjef: Merete Hvattum</h2>
           <p>Tekst om lederen</p>
-          <img src="Bilder/Undergruppebilder/Fake_PR.jpg" class="lederbilde" alt="Nestleder">
+          <img src="Bilder/Undergruppebilder/Nan_Amalie.jpg" class="lederbilde" alt="Nestleder">
           <h2>Nestleder: Nan Amalie Videng</h2>
-          <p>Tekst om nestlederen</p>
+          <p>Jeg heter Nan Amalie Videng og er nestleder for Naborevyen
+            2019/2020. Jeg går 5. året på lektorstudiet, med hovedfag matematikk.<br>
+            Jeg har vært med i Naborevyen siden den andre revyen, I Grevens Tid,
+            samt at jeg de to siste årene har vært kostyme- og rekvisittsjef.
+            I år ga jeg den stafettpinnen videre til Eirin, og tok på meg rollen
+            som nestleder.<br>
+            Som nestleder i revyen fungerer man som revysjefens høyre hånd.
+            I tillegg får man gjerne tildelt tittelen «potet», som egentlig er
+            en ganske bra beskrivelse. En potet, som en nestleder, kan brukes
+            til omtrent alt! Jeg hjelper altså til der det trengs, fra stort
+            til smått.
+          </p>
         </div>
       </div>
     </div>
