--- a/P3/Teknikk.html
+++ b/P3/Teknikk.html
@@ -28,9 +28,10 @@
           </p>
         </div>
         <div class="gruppeleder">
-          <img src="Bilder/Undergruppebilder/Fake_PR.jpg" class="lederbilde" alt="Leder">
+          <img src="Bilder/Undergruppebilder/Teknisksjef.jpg" class="lederbilde" alt="Leder">
           <h2>Teknisk Sjef: Espen Hovland</h2>
-          <p>Teknisk sjef for Naborevyen 2020, Espen, tar over den tekniske
+          <p>
+            Teknisk sjef for Naborevyen 2020, Espen, tar over den tekniske
             stafettpinnen etter forrige tekniske sjef, som også het Espen,
             praktisk nok. Årets Espen er 23 år gammel og går tredjeåret på
             nanoteknologi, med spesialisering i nanoelektronikk.<br>
