--- a/P3/Økonomi.html
+++ b/P3/Økonomi.html
@@ -25,9 +25,21 @@
           </p>
         </div>
         <div class="gruppeleder">
-          <img src="Bilder/Undergruppebilder/Fake_PR.jpg" class="lederbilde" alt="Leder">
+          <img src="Bilder/Undergruppebilder/Frida.jpg" class="lederbilde" alt="Leder">
           <h2>Økonomisjef: Frida Sogge Steimoeggen</h2>
-          <p>Tekst om lederen</p>
+          <p>
+            Her ser du årets økonomisjef, Frida. Jeg går 4. året lektor i
+            realfag, med hovedfag i matematikk, derav min stilling som økonomisjef.
+            Jeg elsker tall og penger, og synes arbeidet med å styre Naborevyens
+            økonomi er meget givende. Jeg har vært med på 4 av 5 reyer i Naborevyen,
+            og har ikke tenkt til å gi meg med det første! Ellers er jeg en
+            nordlending som ikke holder igjen når det kommer til å purre (i det
+            uendelige) på styremedlemmer som glemmer betalingsfrister, og får s
+            tort sett viljen min (på godt og vondt?).<br>
+            Jeg er så heldig at jeg har en fantastisk gjeng i ryggen som hjelper
+            meg med alt som er å gjøre utenom det merkantile, og sammen utgjør
+            vi økonomigruppa.
+          </p>
         </div>
       </div>
     </div>
