La inn Om_oss eksempelbilde

--- a/P3/Om_oss.html
+++ b/P3/Om_oss.html
@@ -29,7 +29,7 @@
           </p>
         </div>
         <div class="gruppeleder">
-          
+          <img src="Bilder/Undergruppebilder/Om_oss_bilde.jpg" alt="Bilde om revyen">
         </div>
       </div>
     </div>
