--- a/P3/index.html
+++ b/P3/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body class="entire_page">
-    <div class="center_element">
+    <div class="center_element banner_page">
 
       <!--Kode for banner slideshow er inspirert av https://www.w3schools.com/howto/howto_js_slideshow.asp-->
       <div class="banner_element">
