--- a/P3/Dans.html
+++ b/P3/Dans.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div class="center_element">
+    <div class="center_element banner_page">
       <img src="Bilder/Bannere/Banner_1.jpg" class="banner" alt="Banner">
       <div class="gruppeboks">
         <div class="gruppetekst">
