--- a/P3/Bygg.html
+++ b/P3/Bygg.html
@@ -44,7 +44,8 @@
         <div class="gruppeleder">
           <img src="Bilder/Undergruppebilder/Byggmester.jpg" class="lederbilde" alt="Leder">
           <h2>Byggsjef: Kasper Klausen</h2>
-          <p>For andre år på rad er jeg (Kasper Klausen) byggsjef i Naborevyen.
+          <p>
+            For andre år på rad er jeg (Kasper Klausen) byggsjef i Naborevyen.
             Når jeg ikke skremmer regissører eller stjeler fra internasjonale
             selskaper pleier jeg å holde meg til mer nøkterne aktiviteter
             knyttet til det å gå andreåret på Nanoteknologi. Som for eksempel å
@@ -54,7 +55,8 @@
             var gruppas mesterverk i fjor, men akkurat som både Vy og AtB må vi
             følge med i tiden og renovere oss selv. Derfor kan jeg garantere at
             det ikke blir noen busser i år! Det eneste jeg kan si med sikkerhet
-            er at det bygges!</p>
+            er at det bygges!
+          </p>
         </div>
       </div>
     </div>
