--- a/P3/Musikk.html
+++ b/P3/Musikk.html
@@ -23,7 +23,9 @@
         <div class="gruppeleder">
           <img src="Bilder/Undergruppebilder/Fake_PR.jpg" class="lederbilde" alt="Leder">
           <h2>Musikksjef: Cippora Magagnin</h2>
-          <p>Tekst om lederen</p>
+          <p>
+            Tekst om lederen
+          </p>
         </div>
       </div>
     </div>
