--- a/P3/Skuespill.html
+++ b/P3/Skuespill.html
@@ -27,7 +27,9 @@
         <div class="gruppeleder">
           <img src="Bilder/Undergruppebilder/Fake_PR.jpg" class="lederbilde" alt="Leder">
           <h2>Regissør: Susanne Rynning Seip</h2>
-          <p>Tekst om lederen</p>
+          <p>
+            Tekst om lederen
+          </p>
         </div>
       </div>
     </div>
