--- a/P3/Styret.html
+++ b/P3/Styret.html
@@ -21,7 +21,8 @@
           <p>Tekst om lederen</p>
           <img src="Bilder/Undergruppebilder/Nan_Amalie.jpg" class="lederbilde" alt="Nestleder">
           <h2>Nestleder: Nan Amalie Videng</h2>
-          <p>Jeg heter Nan Amalie Videng og er nestleder for Naborevyen
+          <p>
+            Jeg heter Nan Amalie Videng og er nestleder for Naborevyen
             2019/2020. Jeg går 5. året på lektorstudiet, med hovedfag matematikk.<br>
             Jeg har vært med i Naborevyen siden den andre revyen, I Grevens Tid,
             samt at jeg de to siste årene har vært kostyme- og rekvisittsjef.
