--- a/P3/Velferd.html
+++ b/P3/Velferd.html
@@ -12,13 +12,15 @@
         <div class="gruppetekst">
           <h1>Velferdgruppen</h1>
           <p>
-
+            Tekst
           </p>
         </div>
         <div class="gruppeleder">
           <img src="Bilder/Undergruppebilder/Fake_PR.jpg" class="lederbilde" alt="Leder">
           <h2>Velferdssjef: Ferdinand Tomek Marnburg</h2>
-          <p>Tekst om lederen</p>
+          <p>
+            Tekst om lederen
+          </p>
         </div>
       </div>
     </div>
