--- a/P3/Kostyme_og_rekvisitter.html
+++ b/P3/Kostyme_og_rekvisitter.html
@@ -25,12 +25,14 @@
         <div class="gruppeleder">
           <img src="Bilder/Undergruppebilder/Eirin.jpg" class="lederbilde" alt="Leder">
           <h2>Kostyme- og Rekvisittsjef: Eirin Haugsvær Monsen</h2>
-          <p>Eirin går i 3. klasse på lektorstudiet med retningen kjemi og
+          <p>
+            Eirin går i 3. klasse på lektorstudiet med retningen kjemi og
             matematikk. Hun har vært med i kostyme alle årene hun har gått på
             studiet og tok for året over stafettpinnen fra Nan Amalie som
             kostymesjef. Hun er også med i Skribentgruppen og holder deres
             elleville kostyme og rekvisittideer i sjakk. Hun tror og håper
-            masse at revyen blir dødsfet :-)</p>
+            masse at revyen blir dødsfet :-)
+          </p>
         </div>
       </div>
     </div>
