Revysjeftekst og bilde

--- a/P3/Styret.html
+++ b/P3/Styret.html
@@ -16,9 +16,18 @@
           </p>
         </div>
         <div class="gruppeleder">
-          <img src="Bilder/Undergruppebilder/Fake_PR.jpg" class="lederbilde" alt="Leder">
+          <img src="Bilder/Undergruppebilder/Merete.jpg" class="lederbilde" alt="Leder">
           <h2>Revysjef: Merete Hvattum</h2>
-          <p>Tekst om lederen</p>
+          <p>
+            Jeg heter Merete og er leder for Naborevyen 2019/2020. Jeg går 
+            fjerde året på lektorstudiet, med biologi og matematikk. Jeg har
+            vært med i revyen siden jeg begynte på studiet, og har derfor vært
+            med siden den andre revyen: I Grevens Tid. I fjor kom jeg inn i
+            styret som musikksjef, og likte det så godt at jeg stilte som leder.<br><br>
+            Som revysjef er min jobb å lede og veilede undergruppesjefene slik
+            at vi får en så god revy som mulig. Der oer også mitt ansvar å ha
+            kommunikasjon med andre revyer.
+          </p>
           <img src="Bilder/Undergruppebilder/Nan_Amalie.jpg" class="lederbilde" alt="Nestleder">
           <h2>Nestleder: Nan Amalie Videng</h2>
           <p>
