--- a/P4/P4_project_testing.html
+++ b/P4/P4_project_testing.html
@@ -28,5 +28,41 @@
       om de brukte mobil eller PC, og hva slags nettleser de brukte.<br>
       Link til skjemaet er: <a href="https://forms.gle/Mp16XE7tjJ5aCQJQA" target="_blank">https://forms.gle/Mp16XE7tjJ5aCQJQA</a>
     </p>
+
+    <h2>Testpublikum</h2>
+    <p>
+
+    </p>
+
+    <h2>Testplattformer</h2>
+    <p></p>
+
+    <h2>Oppsummering av tilbakemeldinger</h2>
+    <p>
+      Etter første runde med testing fikk vi mange tilbakemeldinger om at det var deler av nettsiden som ikke
+      så så veldig bra ut, og at det var store problemer med mobilversjonen. Dette var vi egentlig klar over,
+      men vi fikk noen nyttige tips, for eksempel rundt ting som bakgrunnsfarge på logoen og størrelse på
+      bilder på noen av sidene. Det var også en del ting vi fikk delte tilbakemelidnger på, og her bestemte
+      vi oss bare for å satse på det vi likte best, da vi ikke kan ta høyde for mange forskjellige personlige preferanser <br>
+      Etter første runde med tilbakemeldinger jobbet vi aktivt med å tilrettelegge nettsiden for mobil,
+      og vi fikk løst omtrent alle problemene før vi sendte ut forespørsel til ny testerunde.
+      Vi jobbet også aktivt med design og prøvde å få nettsiden til å se så bra ut som mulig innenfor det
+      spillerommet vi hadde fått fra klienten vår. Det var også noen ting vi lot være å prioritere,
+      som at den embeddede Google Calendaren ikke var så fin å se på, og at arkiv-siden er veldig treg,
+      da noen av disse tingene var vanskelige å gjøre noe med, mens for noen av de andre var det ingen
+      av oss som visste hvordan vi skulle forbedre de kritiserte elementene, og vi utsatte derfor dette.<br>
+      Vi fikk også noen tilbakemeldinger på ting vi ikke hadde oppdaget selv, som at knappene på arkivet
+      for noen testere hoppet opp og ned da de prøvde å trykke på dem. Dette var det ingen av oss som hadde
+      opplevd, og vi fant senere ut at det kanskje var fordi det ikke er noen av oss som har Mac, og dermed
+      ingen av oss som bruker Safari som nettleser. Dette var litt vanskeligere å fikse, men vi fant etter hvert
+      ut av hva som var galt her også.<br><br>
+      Da vi hadde forbedret nettsiden en god del, sendte vi ut en ny forespørsel for tester, og fikk flere tilbakemeldinger.
+      Denne gangen valgte vi også å spørre noen personer med litt mer teknisk innsikt og erfaring, og fikk dermed også litt
+      flere "pirkete" tilbakemeldinger. Dette inkluderer ting som at vi ikke hadde tatt høyde for break points mellom
+      mobil/nettbrett- og desktop-versjon, som resulterte i at hvis nettsiden var akkurat 900 piksler bred, forsvant
+      navigasjonsbaren på toppen av hjemmesiden. Vi fikk også tilbakemelidng om at teksten i footeren, som var svart
+      og grå, hadde for lite kontrast mot mørkerød bakgrunn. Mindre tekniske ting inkluderte at undergruppesidene var
+      litt tomme, og at det godt kunne vært litt mer tekst og evt noen flere blider her.
+    </p>
   </body>
 </html>
