La inn ny google calendar og riktig class til Om_oss bildet

--- a/P3/index.html
+++ b/P3/index.html
@@ -48,8 +48,8 @@
         </div>
 
         <div id="kalender_boks">
-          <iframe src="https://calendar.google.com/calendar/embed?src=gi4hpnji2em895e0orkbl7r1to%40group.calendar.google.com&ctz=Europe%2FOslo" style="border: 0" width="800" height="600"></iframe>
-        </div>
+          <iframe src="https://calendar.google.com/calendar/b/0/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=Europe%2FOslo&amp;showDate=1&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0&amp;showTitle=0&amp;src=OGtuZWlnazJsb2lpbm90czFkc2hwdTBqYzBAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=#ffce46&amp;showNav=1" style="border-width:0px;  filter: grayscale(0%); color: #ffce46; " width="800" height="600" ></iframe>
+                </div>
       </div>
     </div>
   <script src="Website_shell.js" type="text/javascript"></script>
