--- a/P3/Bygg.html
+++ b/P3/Bygg.html
@@ -17,9 +17,7 @@
             fysiske utseende er i vår nåde. Noen ganger bygger vi det som forventes,
             andre ganger oppdager regissøren at hun må innlemme en 5m*2m stor buss i
             oppsetningen tre dager før premieren. Byggruppa skaper uansett stor
-            spenning for alle involverte parter!
-          </p>
-          <p>
+            spenning for alle involverte parter!<br><br>
             Byggruppa bruker det meste av tiden på byggekjelleren på Moholt hvor vi
             snekrer, limer, maler, driller og hamrer. På byggekjelleren er raske
             løsninger den eneste aksepterte valuta, og med den metaforen på plass
@@ -28,9 +26,7 @@
             en søppelhaug! Halvparten av alle rekvisitter bygges i papp? Stikk innom
             IKEA, lei en varebil, ta så mye papp du vil fra IKEAs ulåste
             pappcontainere, forlat åstedet ved hjelp av tidligere nevnte varebil og du
-            har all pappen du trenger!
-          </p>
-          <p>
+            har all pappen du trenger!<br><br>
             Uansett bakgrunn er Byggruppa et godt innslag i en aktiv studenthverdag.
             Praktisk og kreativt sløydarbeid er noe man fort innser at er en glemt
             glede fra grunnskolen, og avspenningsverdien av slike aktiviteter kan ikke
