--- a/P4/P4_project_testing.html
+++ b/P4/P4_project_testing.html
@@ -26,7 +26,7 @@
       på helhetlig utseende, brukervennlighet, åpenbare feil/mangler og eventuelle andre kommentarer.
       Vi kartla også om de var med i styret til Naborevyen,
       om de brukte mobil eller PC, og hva slags nettleser de brukte.<br>
-      Link til skjemaet er: <a href="https://forms.gle/Mp16XE7tjJ5aCQJQA" target="_blank">https://forms.gle/Mp16XE7tjJ5aCQJQA</a>
+      Link til skjemaet er: <a href=https://forms.gle/Mp16XE7tjJ5aCQJQA target="_blank">https://forms.gle/Mp16XE7tjJ5aCQJQA</a>
     </p>
 
     <h2>Testpublikum</h2>
