--- a/P3/Om_oss.html
+++ b/P3/Om_oss.html
@@ -13,8 +13,16 @@
           <h1>Om Naborevyen</h1>
           <p>
             Naborevyen er revyen for studenter som tilhører Spanskrøret
-            (Lektorutdanning i realfag) og Timini (Nanoteknologi).<br><br>
-
+            (Lektorutdanning i realfag) og Timini (Nanoteknologi). Dette er et
+            godt tilbud for studenter som ønsker å få utspill for sin kreativitet
+            i en ellers skoletung hverdag. Samtidig er det en gyllen mulighet
+            til å bli kjent med andre studenter på tvers av trinn og linjeforening.
+            Hvert år arrangerer vi øvingshelger, hyttetur, sosiale kvelder og
+            fester.<br><br>
+            Revyen ble stiftet i 2015 i forbindelse med Timini sitt 10-årsjubileum.
+            Den første revyen, Hello World!, gikk av stabelen i uke 8 i 2016.
+            Etter en braksuksess måtte jo dette gjentas, og vi er svært glad i
+            revyen vår.<br><br>
             Naborevyen ble stiftet over en pakke appelsinkjeks. Ryktene vil ha det
             til at Nicolai Winter-Hjelm sto for stiftelsen alene, siden han er den
             eneste i Naborevyen som liker, og noen gang kommer til å like,
