--- a/P3/Styret.html
+++ b/P3/Styret.html
@@ -12,14 +12,32 @@
         <div class="gruppetekst">
           <h1>Revystyret</h1>
           <p>
-            Trenger tekst
+            Styret er den herlige gjengen som skal sette i stand Naborevyen. De
+            har til sammen ansvaret for alle deler av revyen, enten det er på
+            scenen, bak scenen eller utenfor der igjen. Mer om hva hver enkelt
+            stilling gjør kan leses på gruppene deres. <br>
+            Her kan du se styrets 12 stillinger:
           </p>
+            <ul style="line-height: 1.5">
+              <li>Revysjef</li>
+              <li>Nestleder</li>
+              <li>Økonomisjef</li>
+              <li>Skribentsjef</li>
+              <li>Regissør</li>
+              <li>Dansesjef</li>
+              <li>Musikksjef</li>
+              <li>Kostyme- og rekvisitsjef</li>
+              <li>Byggsjef</li>
+              <li>Teknisk sjef</li>
+              <li>PR- og designsjef</li>
+              <li>Velferdssjef</li>
+            </ul>
         </div>
         <div class="gruppeleder">
           <img src="Bilder/Undergruppebilder/Merete.jpg" class="lederbilde" alt="Leder">
           <h2>Revysjef: Merete Hvattum</h2>
           <p>
-            Jeg heter Merete og er leder for Naborevyen 2019/2020. Jeg går 
+            Jeg heter Merete og er leder for Naborevyen 2019/2020. Jeg går
             fjerde året på lektorstudiet, med biologi og matematikk. Jeg har
             vært med i revyen siden jeg begynte på studiet, og har derfor vært
             med siden den andre revyen: I Grevens Tid. I fjor kom jeg inn i
