--- a/P4/P4_project_testing.html
+++ b/P4/P4_project_testing.html
@@ -38,31 +38,57 @@
     <p></p>
 
     <h2>Oppsummering av tilbakemeldinger</h2>
+    <h3>Testerunde 1</h3>
     <p>
-      Etter første runde med testing fikk vi mange tilbakemeldinger om at det var deler av nettsiden som ikke
+      Under første runde med testing fikk vi mange tilbakemeldinger om at det var deler av nettsiden som ikke
       så så veldig bra ut, og at det var store problemer med mobilversjonen. Dette var vi egentlig klar over,
       men vi fikk noen nyttige tips, for eksempel rundt ting som bakgrunnsfarge på logoen og størrelse på
-      bilder på noen av sidene. Det var også en del ting vi fikk delte tilbakemelidnger på, og her bestemte
-      vi oss bare for å satse på det vi likte best, da vi ikke kan ta høyde for mange forskjellige personlige preferanser <br>
-      Etter første runde med tilbakemeldinger jobbet vi aktivt med å tilrettelegge nettsiden for mobil,
-      og vi fikk løst omtrent alle problemene før vi sendte ut forespørsel til ny testerunde.
-      Vi jobbet også aktivt med design og prøvde å få nettsiden til å se så bra ut som mulig innenfor det
-      spillerommet vi hadde fått fra klienten vår. Det var også noen ting vi lot være å prioritere,
-      som at den embeddede Google Calendaren ikke var så fin å se på, og at arkiv-siden er veldig treg,
-      da noen av disse tingene var vanskelige å gjøre noe med, mens for noen av de andre var det ingen
-      av oss som visste hvordan vi skulle forbedre de kritiserte elementene, og vi utsatte derfor dette.<br>
+      bilder på noen av sidene. Det var også en del ting vi fikk delte tilbakemelidnger på, hvor noen mente en
+      ting og noen andre mente det stikk motsatte (typ lys/mørk bakgrunn, fine/stygge fargevalg).
+      Vi fikk også noen tilbakemeldinger som var litt mer omfattende, som at arkiv-siden var treg og lite brukervennlig.
+      Noen av tilbakemeldingene var også ting vi ikke visste hvordan vi skulle gjøre noe med, som at den embeddede
+      Google Calendaren ikke så så fin ut. <br>
       Vi fikk også noen tilbakemeldinger på ting vi ikke hadde oppdaget selv, som at knappene på arkivet
       for noen testere hoppet opp og ned da de prøvde å trykke på dem. Dette var det ingen av oss som hadde
       opplevd, og vi fant senere ut at det kanskje var fordi det ikke er noen av oss som har Mac, og dermed
-      ingen av oss som bruker Safari som nettleser. Dette var litt vanskeligere å fikse, men vi fant etter hvert
-      ut av hva som var galt her også.<br><br>
+      ingen av oss som bruker Safari som nettleser.
+    </p>
+    <h3>Testerunde 2</h3>
+    <p>
       Da vi hadde forbedret nettsiden en god del, sendte vi ut en ny forespørsel for tester, og fikk flere tilbakemeldinger.
       Denne gangen valgte vi også å spørre noen personer med litt mer teknisk innsikt og erfaring, og fikk dermed også litt
       flere "pirkete" tilbakemeldinger. Dette inkluderer ting som at vi ikke hadde tatt høyde for break points mellom
       mobil/nettbrett- og desktop-versjon, som resulterte i at hvis nettsiden var akkurat 900 piksler bred, forsvant
-      navigasjonsbaren på toppen av hjemmesiden. Vi fikk også tilbakemelidng om at teksten i footeren, som var svart
-      og grå, hadde for lite kontrast mot mørkerød bakgrunn. Mindre tekniske ting inkluderte at undergruppesidene var
-      litt tomme, og at det godt kunne vært litt mer tekst og evt noen flere blider her.
+      navigasjonsbaren på toppen av hjemmesiden. Vi fikk også tilbakemelidng om at teksten i footeren,
+      som var svart og grå, hadde for lite kontrast mot mørkerød bakgrunn,
+      og at YouTube-ikonet hadde lysere bakgrunn enn Facebook- og Instagram-ikonet.
+      Mindre tekniske ting inkluderte at undergruppesidene var litt tomme,
+      og at det godt kunne vært litt mer tekst og evt noen flere blider på disse.
+    </p>
+    <h2>Respons på tilbakemeldinger</h2>
+    <h3>Etter testerunde 1</h3>
+    <p>
+      Etter første runde med testing jobbet vi først med å fikse det mest kritiske, og det vi visste måtte gjøres noe med.
+      Dette inkluderer å gjøre siden mobilvennlig, og fikse kritiske designvalg som hadde fått mye kritikk i tilbakeldignene.
+      Vi fikk en liten utfordring da vi kom til stilvalg som var litt mer subjektive, som for eksempel bagrunnsfargen til nettsiden.
+      På de valgene hvor vi hadde fått selvmotstridende tilbakemeldinger bestemte vi oss bare for å satse på
+      det vi likte best, da personlige preferanser alltid vil variere og ikke er vits å ta høyde for.
+      Vi jobbet videre aktivt med design og prøvde å få nettsiden til å se så bra ut som mulig innenfor det
+      spillerommet vi hadde fått fra klienten vår. <br>
+      Det var også noen ting vi lot være å prioritere, som at den embeddede Google Calendaren ikke var så fin å se på,
+      og at arkiv-siden var veldig treg. Disse tingene var enten vanskelige å gjøre noe med,
+      eller hadde ikke noen åpenbar løsning noen av oss visste hvordan vi skulle implementere.
+      Vi valgte derfor å utsette mange av disse tingene til senere.<br>
+    </p>
+    <h3>Etter testrunde 2</h3>
+    <p>
+      Vi jobbet aktivt med å fikse de tilbakemeldinene som hadde enkle løsninger, som break points mellom desktop/mobilside
+      og kontrasten i footeren, mens noen av de andre tingene som ikke hadde like enkle løsninger ble igjen nedprioritert.
+      Fargen på YouTube-ikonet er derfor fortsatt ikke helt likt de andre ikonene i footeren. Vi oppdaget også noen småfeil
+      her og der mens vi testet selv, og brukte mye tid på å fikse disse.
+      Vi har fortsatt ikke gjort noe med arkiv-siden, da dette hadde blitt veldig mye jobb,
+      og kalenderen fra Google ser ganske uforandret ut. Det er mye mer vi kunne gjort av småting,
+      men dette er de største tingene vi bevisst har latt være å gjøre noe med. 
     </p>
   </body>
 </html>
