Ferdigstilte Arkiv_Bilder og Arkivet. Nå 20 ganger mer komprimert!

--- a/P3/Arkiv.html
+++ b/P3/Arkiv.html
@@ -84,7 +84,7 @@
     </div>
     <script src="Website_shell.js" type="text/javascript"></script>
     <script src="Arkiv.js" type="text/javascript"> </script>
-    <script type="text/javascript" src="./Bilder/Arkiv_Bilder/TextOutput2.txt" onload="load()"></script>
+    <script type="text/javascript" src="Bilder/Arkiv_Bilder/TextOutput3.txt" onload="load()"></script>
 
   </body>
 </html>
